default constructor for Greeting

--- a/labs/build_a_boot_app/README.adoc
+++ b/labs/build_a_boot_app/README.adoc
@@ -34,6 +34,7 @@ package com.vmware.workshop.greeting.service.dom;
 public class Greeting {
     private String greeting = "hello, world";
 
+    public Greeting() {}
     public Greeting(String greeting) {
         this.greeting = greeting;
     }
